# ShaderEditor

./: .gitignore  .gitmodules  App.cpp  App.h  CMakeLists.txt  FileSerialization.h  Generator.cpp  Generator.h  Graph.cpp  Graph.h  IdProvider.cpp  IdProvider.h  NodeLibrary.cpp  NodeLibrary.h  Readme.md  Render.cpp  Render.h  Serialization.cpp  Serialization.h  Utils.cpp  Utils.h  main.cpp  xmath.h
